unpackaged/main/default/objects/Test_Step_Result__c/Test_Step_Result__c.object-meta.xml
<CustomObject>
    <description>One step&#39;s actual result within ONE execution. The Test Step lookup deliberately stays clear-on-delete: deleting a step removes its results across every execution via the step&#39;s before-delete trigger (which sees the lookups while still populated).</description>
    <label>Test Step Result</label>
    <nameField>
        <displayFormat>TSR-{00000}</displayFormat>
        <label>Test Step Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Step Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>