unpackaged/main/default/objects/Test_Step_Result__c/fields/Actual_Result__c.field-meta.xml
<CustomField>
    <fullName>Actual_Result__c</fullName>
    <description>What actually happened, in the tester&#39;s words. Blank until the tester runs it.</description>
    <label>Actual Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>