unpackaged/main/default/objects/Test_Step_Result__c/fields/Defect_Severity__c.field-meta.xml
<CustomField>
    <fullName>Defect_Severity__c</fullName>
    <description>DEPRECATED 2026-08-06 - scripted defects are Finding records now (Exploratory_Finding__c with Source__c = &#39;Test case&#39; and Test_Step_Result__c populated), so defects from both flows triage in one place. Migrated, then left in place so the change is reversible by code revert alone. No longer read or written.</description>
    <label>Defect Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>