unpackaged/main/default/objects/Test_Step_Result__c/fields/Defect_Summary__c.field-meta.xml
<CustomField>
    <fullName>Defect_Summary__c</fullName>
    <description>DEPRECATED 2026-08-06 - see Defect_Severity__c. The summary text migrated into the Finding&#39;s Title__c and What_Happened__c. No longer read or written.</description>
    <label>Defect Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>