unpackaged/main/default/objects/Test_Step_Result__c/fields/Explore_Notes__c.field-meta.xml
<CustomField>
    <fullName>Explore_Notes__c</fullName>
    <description>Used instead of Result/Actual Result when the step is exploratory (Is Explore).</description>
    <label>Explore Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>