unpackaged/main/default/objects/Test_Step_Result__c/fields/Test_Execution__c.field-meta.xml
<CustomField>
    <fullName>Test_Execution__c</fullName>
    <description>Owning execution (one tester&#39;s run).</description>
    <label>Test Execution</label>
    <referenceTo>Test_Execution__c</referenceTo>
    <relationshipLabel>Test Step Results</relationshipLabel>
    <relationshipName>Test_Step_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>