unpackaged/main/default/objects/Test_Step_Result__c/fields/Test_Step__c.field-meta.xml
<CustomField>
    <fullName>Test_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The authored step this result answers. Clear-on-delete by design — see object description.</description>
    <label>Test Step</label>
    <referenceTo>Test_Step__c</referenceTo>
    <relationshipLabel>Test Step Results</relationshipLabel>
    <relationshipName>Test_Step_Results</relationshipName>
    <type>Lookup</type>
</CustomField>