unpackaged/main/default/objects/Test_Step_Result__c/fields/Workflow_Status__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Status__c</fullName>
    <description>Admin triage disposition for a step failure that has NO Finding — a tester can fail a step without filing one, and those failures need a queue too. When a Finding exists for this step (Source__c = &#39;Test case&#39;, Test_Step_Result__c populated), the Finding&#39;s Workflow_Status__c is the defect&#39;s record; this field does not replace it. Written only by UatReportController.setStepWorkflowStatus behind the UAT_Console gate; UAT_Tester holds it read-only, and UatRunController.saveStepResult never touches it. Values mirror Exploratory_Finding__c.Workflow_Status__c, UatReportController.WORKFLOW_STATUS_VALUES and lwc/uatConstants WORKFLOW_STATUSES — change all together.</description>
    <label>Workflow Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Added to Jira</fullName>
            </value>
            <value>
                <fullName>Added to ClickUp</fullName>
            </value>
            <value>
                <fullName>Not verified</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>