unpackaged/main/default/objects/Test_Step_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Test_Step__c</columns>
    <columns>Result__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>